Fix layout issues and add progile image

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,11 @@
+$bps: (
+    mobileUp: 361px,
+    twoCol: 700px,
+    tabletUp: 768px,
+    desktopUp: 1072px,
+    designMax: 1380px
+);
+
 $color: (
     white: #FFFFFF,
     dark: #4E4B56,
